[feat]getCookieList方法统一用一个json类